<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="21dp" >

            <TextView
                android:id="@+id/text_draft"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:text="@string/task_draft"
                android:textColor="@color/main_bg" />

            <TextView
                android:id="@+id/text_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/task_releaes_title"
                android:textColor="@color/main_bg"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_task_releaes"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="@string/task_release"
                android:textColor="@color/main_bg" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_above="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="54dp"
            android:src="@drawable/ic_issue_bg" />

        <Button
            android:id="@+id/btn_task_releaes"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:background="@drawable/ic_issue_bott"
            android:text="@string/task_releaes_title"
            android:textColor="@color/header_bg" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_task_releaes"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="37dp"
            android:gravity="center"
            android:text="@string/task_null"
            android:textColor="@color/light_gray5"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>