<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray2"
    android:orientation="vertical" >

    <include
        android:id="@+id/heaher_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/main_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:text="@string/user_information_email" />

            <EditText
                android:id="@+id/editText1"
                style="@style/edit_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="16" >
            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/light_gray2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:text="@string/reg_pin" />

            <EditText
                android:id="@+id/editText2"
                style="@style/edit_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="6" >
            </EditText>

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_button_submit"
                android:text="@string/reg_getpin"
                android:textColor="@color/main_bg" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/main_bg"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_button_submit"
                android:text="@string/task_submit"
                android:textColor="@color/main_bg" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>