<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="21dp" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:padding="6dp"
            android:src="@drawable/ic_toolbar_back" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/user_register" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/header_bg" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:text="登录"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/main_bg"
            android:ems="16"
            android:hint="@string/user_name"
            android:maxLength="16"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray2" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="22dp"
            android:background="@color/main_bg"
            android:ems="16"
            android:hint="@string/user_pwd"
            android:inputType="textPassword"
            android:maxLength="18"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray2" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_button_submit"
            android:text="@string/user_login"
            android:textColor="@color/main_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginTop="22dp" >

            <TextView
                android:id="@+id/text_retrieve_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="left"
                android:text="@string/user_retrieve_pwd"
                android:textColor="@color/light_gray8" />

            <TextView
                android:id="@+id/text_tourist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="right"
                android:text="@string/user_visitor"
                android:textColor="@color/light_gray8" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center_horizontal"
        android:text="第三方登录"
        android:textColor="@color/light_gray9"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center" >

        <ImageView
            android:id="@+id/img_weibo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_login_weibo" />

        <ImageView
            android:id="@+id/img_qq"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_login_qq" />

        <ImageView
            android:id="@+id/img_weixin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_login_weixin" />
    </LinearLayout>

</LinearLayout>