<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray2"
    android:orientation="vertical" >

    <include
        android:id="@+id/heaher_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/set_push" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/light_gray2"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" >

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/clear_cache" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="0"
                android:textColor="@color/light_gray5" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray2" />

        <LinearLayout
            android:id="@+id/layout_about_us"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" >

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/about_us" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_me_set_more" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray2" />

        <LinearLayout
            android:id="@+id/layout_check_updates"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" >

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/check_updates" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_me_set_more" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_out"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/main_bg"
        android:gravity="center"
        android:text="@string/exit_login"
        android:textColor="@color/header_bg" />

</LinearLayout>