<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="21dp" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:padding="6dp"
            android:src="@drawable/ic_toolbar_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@color/header_bg" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:text="找回密码"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_phone"
            style="@style/edit_login_style"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="11"
            android:hint="@string/reg_phone"
            android:inputType="phone"
            android:textSize="20sp" >
        </EditText>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="22dp" >

            <EditText
                android:id="@+id/edit_pin"
                style="@style/edit_login_style"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:ems="6"
                android:hint="@string/reg_pin"
                android:inputType="number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btn_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_getpin"
                android:textColor="@color/header_bg"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/light_gray2" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_button_submit"
        android:text="@string/reg_next"
        android:textColor="@color/main_bg" />

</LinearLayout>